--- a/Zadanie/Zadanie/Views/Home/Index.cshtml
+++ b/Zadanie/Zadanie/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Dzień dobry/h1>
+    <p>Zadanie znajduje się w zakładce Form-Index</p>
 </div>
