--- a/Zadanie/Zadanie/Views/Home/Index.cshtml
+++ b/Zadanie/Zadanie/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Dzień dobry/h1>
+    <h1 class="display-4">Dzień dobry</h1>
     <p>Zadanie znajduje się w zakładce Form-Index</p>
 </div>
