--- a/Zadanie/Zadanie/Views/Form/Created.cshtml
+++ b/Zadanie/Zadanie/Views/Form/Created.cshtml
@@ -19,7 +19,7 @@
         
 
         for (var i = 0; i < x; i++) {
-            document.write(y+"<br />");
+            document.write(i+". "+y+"<br />");
         }
 
     </script>
