--- a/Zadanie/Zadanie/Views/Form/Created.cshtml
+++ b/Zadanie/Zadanie/Views/Form/Created.cshtml
@@ -1,4 +1,4 @@
-@model Zadanie.Models.FormModel
+﻿@model Zadanie.Models.FormModel
 @{
     ViewData["Title"] = "Form-Created";
 }
@@ -16,11 +16,15 @@
        var x =  @Html.DisplayFor(model => model.HowMuch);
         var y = '@Html.DisplayFor(model => model.Name)';
 
-        
 
-        for (var i = 0; i < x; i++) {
-            document.write(i+". "+y+"<br />");
+        if (x < 1) document.write("Wprowadziłeś za małą liczbę potwórzeń...")
+        else if (x > 5) document.write("Wprowadziłeś za dużą liczbę powtórzeń...")
+        else {
+            for (var i = 0; i < x; i++) {
+                document.write(i + 1 + ". " + y + "<br />");
+            }
         }
+                
 
     </script>
 
